base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icon-scout-service
spec:
  selector:
    app: icon-scout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
