base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icon-scout-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: "gce"
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: icon-scout-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: icon-scout-frontend-service
                port:
                  number: 80
